fix(core-layout): header collapse

--- a/src/_header.sass
+++ b/src/_header.sass
@@ -44,10 +44,10 @@ $logo-size: 3.5rem
         text-align: right
 
         //responsive top-bar display
-        .mobile-top-bar ul
+        .mobile-top-bar > ul
             @include md
                 display: none
-        .top-bar ul
+        .top-bar > ul
             display: none
             @include md
                 display: flex
@@ -65,7 +65,6 @@ $logo-size: 3.5rem
         order: 4
         position: relative
 
-        height: 100%
         width: 1rem
         margin-left: 1rem
 
@@ -78,6 +77,7 @@ $logo-size: 3.5rem
             left: 0
             right: 0
             opacity: 0
+            z-index: 10
 
 
     @include md
